@@ -1,5 +1,5 @@
 !
-! Copyright (C) 2001-2011 Quantum ESPRESSO group
+! Copyright (C) 2001-2013 Quantum ESPRESSO group
 ! This file is distributed under the terms of the
 ! GNU General Public License. See the file `License'
 ! in the root directory of the present distribution,
@@ -7,13 +7,14 @@
 !  
 !
 !-----------------------------------------------------------------------
-  SUBROUTINE non_scf (ik_)
+  SUBROUTINE non_scf ( )
   !-----------------------------------------------------------------------
   !
   ! ... diagonalization of the KS hamiltonian in the non-scf case
   !
   USE kinds,                ONLY : DP
   USE bp,                   ONLY : lelfield, lberry, lorbm
+  USE check_stop,           ONLY : stopped_by_user
   USE control_flags,        ONLY : io_level, conv_elec
   USE ener,                 ONLY : ef
   USE io_global,            ONLY : stdout, ionode
@@ -26,19 +27,19 @@
   !
   IMPLICIT NONE
   !
-  INTEGER, INTENT (in) :: ik_
-  !
   ! ... local variables
   !
-  INTEGER :: iter = 1, i, ik
+  INTEGER :: iter, ik_, i
   REAL(DP) :: dr2 = 0.d0
   REAL(DP), EXTERNAL :: get_clock
   !
   !
   CALL start_clock( 'electrons' )
+  iter = 1
+  ik_  = 0
+  dr2  = 0.0_dp
   !
   WRITE( stdout, 9002 )
-  !
   CALL flush_unit( stdout )
   !
   IF ( lelfield) THEN
@@ -47,8 +48,15 @@
      !
   ELSE
      !
-     CALL c_bands_nscf ( ik_ )
+     CALL c_bands_nscf ( )
      !
+  END IF
+  !
+  ! ... check if calculation was stopped in c_bands
+  !
+  IF ( stopped_by_user ) THEN
+     conv_elec=.FALSE.
+     RETURN
   END IF
   !
   ! ... xk, wk, isk, et, wg are distributed across pools;
@@ -98,3 +106,4 @@
 9102 FORMAT(/'     End of band structure calculation' )
   !
 END SUBROUTINE non_scf
+
